force-app/main/default/objects/Pertenencia_a_Programas__c/Pertenencia_a_Programas__c.object-meta.xml
<CustomObject>
    <description>Es la pertencia a los programas de Prácticas Educativas Nivel 0, 1 o Nivel 2</description>
    <label>Pertenencia a Programa</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nombre de Pertenencia a CFC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pertenencia a Programa Educativo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>