force-app/main/default/objects/Pertenencia_a_Programas__c/fields/Alumno__c.field-meta.xml
<CustomField>
    <fullName>Alumno__c</fullName>
    <label>Alumno</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Pertenencias_a_Programas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>