force-app/main/default/objects/Pertenencia_a_Programas__c/fields/Detalles__c.field-meta.xml
<CustomField>
    <fullName>Detalles__c</fullName>
    <formula>HYPERLINK(Id,&quot;Ver&quot; ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Detalles</label>
    <type>Text</type>
</CustomField>