force-app/main/default/objects/Pertenencia_a_Programas__c/fields/Fecha_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_fin__c</fullName>
    <label>Fecha de fin</label>
    <type>Date</type>
</CustomField>