force-app/main/default/objects/Pertenencia_a_Programas__c/fields/Motivo_de_Baja__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Baja__c</fullName>
    <label>Motivo de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inscripto no inicia</fullName>
            </value>
            <value>
                <fullName>No le gustan tareas/ espacios</fullName>
                <label>Desinterés por el Programa</label>
            </value>
            <value>
                <fullName>Prioridades</fullName>
                <label>Prioriza otras actividades o responsabilidades</label>
            </value>
            <value>
                <fullName>Dejó la Escuela</fullName>
                <label>Abandono Escolar</label>
            </value>
            <value>
                <fullName>Se cambió de Escuela</fullName>
                <label>Cambio de escuela</label>
            </value>
            <value>
                <fullName>Trabajo</fullName>
            </value>
            <value>
                <fullName>Embarazo</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Terminó nivel 0</fullName>
            </value>
            <value>
                <fullName>Terminó nivel 1</fullName>
            </value>
            <value>
                <fullName>Terminó el programa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>