force-app/main/default/objects/Pertenencia_a_Programas__c/fields/Observaciones_Baja__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Baja__c</fullName>
    <inlineHelpText>Ingresar observaciones que detallen el motivo de la baja</inlineHelpText>
    <label>Observaciones Baja</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>