force-app/main/default/objects/Pertenencia_a_Programas__c/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <label>Programa</label>
    <referenceTo>Programa__c</referenceTo>
    <relationshipName>Pertenencias_a_Programas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>