force-app/main/default/objects/Pertenencia_a_Programas__c/fields/Seguimiento_Educativo_del__c.field-meta.xml
<CustomField>
    <fullName>Seguimiento_Educativo_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seguimiento Educativo</label>
    <referenceTo>Seguimiento_Educativo__c</referenceTo>
    <relationshipName>Pertenencia_a_CFC_del</relationshipName>
    <type>Lookup</type>
</CustomField>