force-app/main/default/objects/Pertenencia_a_Programas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alumno__c</columns>
    <columns>Programa__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_de_inicio__c</columns>
    <columns>Fecha_de_fin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>es</language>
</ListView>